--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,187 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
+@font-face {
+    font-family: 'Press Start 2P';
+    src: url(https://fonts.gstatic.com/s/pressstart2p/v9/e3t4euO8T-267oIAQAu6jDQyK3nYivN04w.woff2);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+.page-container {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  /* border: 1px solid black; */
+  overflow: hidden;
+}
+
+.page-background {
+  width: 1300px;
+  height: 800px;
+  background-image: url('./images/background-border.svg');
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  position: relative;
+  /* overflow: hidden; */
+}
+
+/* @media(min-width: 1000px){
+  .page-container {
+    width: 1000px;
+    margin: auto;
+  }
+} */
+
+
+.chunk {
+  width: 100%;
+  height: auto;
+  /* border: 1px solid yellow; */
+}
+
+.component-wrapper {
+  width: 100%;
+  height: auto;
+  /* border: 1px solid blue; */
+}
+
+.center-flex {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.boxed {
+  width: 95%;
+}
+
+.absolute-bottom {
+  position: absolute;
+  bottom: 0px;
+}
+
+.overflow {
+  overflow: hidden;
+}
+
+.background-blur {
+  backdrop-filter: blur(25px);
+}
+
+.full-shadow {
+  box-shadow: 2px 2px 3px rgba(50, 50, 50, 0.3), -.5px -.5px 3px rgba(50, 50, 50, 0.3);
+}
+
+.u-shadow {
+  box-shadow: 2px 2px 2px rgba(50, 50, 50, 0.3), -.5px 0px 3px rgba(50, 50, 50, 0.3);
+}
+
+.n-shadow {
+  box-shadow: 2px 0px 2px rgba(50, 50, 50, 0.3), -.5px 0px 3px rgba(50, 50, 50, 0.3);
+}
+
+.bottom-shadow {
+  box-shadow: 0px 1px 1px rgba(50, 50, 50, 0.3);
+}
+
+.small-margin {
+  margin: 0px 5px 0px 5px;
+}
+
+.auto-margin {
+  margin: auto;
+}
+
+.circle-border {
+  border-radius: 50%;
+}
+
+.round-border {
+  border-radius: 2.5px
+}
+
+.round-border-bottom {
+  border-bottom-left-radius: 2.5px;
+  border-bottom-right-radius: 2.5px;
+}
+
+.bottom-border-small {
+  border-bottom: .5px solid grey
+}
+
+.transform-bottom {
+  transform: translateY(150%);
+  margin-top: 100%;
+}
+
+.center-translate {
+  transform: translate(-50%);
+  margin-left: 50%;
+}
+
+.top-margin {
+  margin-top: 15px;
+}
+
+.top-margin-small {
+  margin-top: 7.5px;
+}
+
+.top-margin-large {
+  margin-top: 60px;
+}
+
+.bottom-margin {
+  margin-bottom: 15px;
+}
+
+.bottom-margin-small {
+  margin-bottom: 7.5px;
+}
+
+.bottom-margin-large {
+  margin-bottom: 60px;
+}
+
+.vertical-padding {
+  padding: 15px 0px 15px 0px;
+}
+
+.vertical-padding-small {
+  padding: 7.5px 0px 7.5px 0px;
+}
+
+.top-padding {
+  padding-top: 15px;
+}
+
+.top-padding-large {
+  padding-top: 60px;
+}
+
+.bottom-padding {
+  padding-bottom: 15px;
+}
+
+.top-padding-small {
+  padding-bottom: 7.5px;
+}
+
+.no-display {
+  display: none;
 }
